# BJ-CPP

./: Blackjack.cbp  Blackjack.depend  Blackjack.layout  CMakeLists.txt  README.md
document/: POO-Documentatie.docx
include/: card.h  color.h  compatible.h  dealer.h  deck.h  game.h  human.h  player.h  print.h  statistics.h
src/: blackjack.cpp  card.cpp  dealer.cpp  deck.cpp  game.cpp  human.cpp  player.cpp  print.cpp  statistics.cpp
